# ny-taxi-project-data

./: Dockerfile  README.md  etl_parent_flow-deployment.yaml  pyproject.toml  requirements.txt
dbt/: pyproject.toml
dbt/ny_trip_data/: dbt_project.yml  package-lock.yml
dbt/ny_trip_data/macros/: get_payment_type_description.sql  rate_code_type_description.sql
dbt/ny_trip_data/models/core/: fact_trips.sql
dbt/ny_trip_data/models/staging/: stg_yellow_tripdata.sql
marte/: ingestion.py  pyproject.toml
marte/dbt/ny_trip_data/: packages.yml
marte/dbt/ny_trip_data/models/core/: dim_zones.sql  fact_trips.sql
marte/dbt/ny_trip_data/models/staging/: schema.yml  stg_yellow_tripdata.sql
marte/flows/: pipeline.py
