[tool.poetry]
name = "dbt-trip-data"
version = "0.1.0"
description = "Transform and deploy data from trip-data website"
authors = ["vfamim <vfamim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <=3.13"
dbt-bigquery = "^1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
