[tool.poetry]
name = "ny-taxi-project-data"
version = "0.1.0"
description = "Projeto para criação de uma estrutura de dados sobre o NY TLC Trip Record Data"
authors = ["vfamim <vfamim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.2"
prefect = "^2.14.3"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
pyarrow = "^14.0.1"
prefect-gcp = "^0.5.1"
pandas-gbq = "^0.19.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
